Remove unused repositories, controllers, services, and mappers; introduce BaseEntity factory and AbstractCrudService
Deleted unused classes such as repositories, controllers, and mappers related to redundant entities. Added `BaseEntityFactory` for providing consistent initialization logic for `BaseEntity`. Implemented `AbstractCrudService` to centralize CRUD functionality and simplify service implementations. Added `validateNotNull` and `validateNotEmpty` utility methods for improving validation consistency in services. Updated exception handling and introduced `EntityNotFoundException` for clarity.